Fixed image sizing in newsfeed(no longer stretches), CSS is finished for profile, but needs filtering options. Starting on badge group

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -65,18 +65,13 @@
       background-color: #FFFFFF;
   }
   .badge-content {
-      max-width: 375px;
-      height: 375px;
+      /* max-width: 375px; */
+      /* height: 375px; */
   }
   .badge-name {
       font-weight: 10px;
       line-height: 60px;
       padding-left: 20px;
-  }
-  
-  .badge-image {
-      max-width: 375px;
-      height: 375px;
   }
   .badge-post-interaction {
       font-family: 'Open Sans', sans-serif;
